Update to Angular Signlr Hub 1.1.1

--- a/SignalRGridDemo/Views/Home/Index.cshtml
+++ b/SignalRGridDemo/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
     <script src="~/Scripts/jquery.signalR-2.0.0.js"></script>
     <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/angular-resource.js"></script>
-    <script src="~/App/signalr-hub.js"></script>
+	<script src="~/Scripts/angular-signalr-hub.js"></script>
     <script src="~/App/odata.js"></script>
     <script src="~/App/EmployeeGrid.js"></script>
 }
